# CustomNetwkrLib

./: .gitignore  CMakeLists.txt  README.md  assembly.xml  pom.xml
include/: library.h  version.h
include/db/: db_connector.h  redis_connector.h
include/handler/: handler_manager.h
include/net/: acceptor.h  asyn_session_pool.h  async_session_impl.h  async_session_pool.h  header.h  header_factory.h  hive_server.h  network_define.h  packet_worker.h  packet_worker_manager.h  session_pool.h  skeleton_server.h  sync_session.h  sync_session_impl.h  sync_session_pool.h
include/util/: auto_task.h  buffer.h  calculation.h  common_pool.h  configure.h  container.h  encoder.h  logger.h  map_container.h  memory_manager.h  pool.h  repeate_task.h  stop_watch.h  string_util.h  time_func.h
packet_generator/: PacketGenerator.pyproj  RunGenerator.bat  RunGenerator.sh  erd.vsd  network.py  packet_generator.py  packet_test.py
packet_generator/packet_define_db/: packet_define.sql  packet_define.sqlite
proj_vs11/: dummyServer.vcxproj  dummyServer.vcxproj.filters  libSklt.sln  libSklt.vcxproj  libSklt.vcxproj.filters  tesClient.vcxproj  tesClient.vcxproj.filters  testClient.vcxproj  testClient.vcxproj.filters
protocol/: AnimationInfoLoad.cpp  AnimationInfoLoad.h  AnimationInfoPassing.cpp  AnimationInfoPassing.h  LeagueTimeSet.cpp  LeagueTimeSet.h  PlayerDetailInfoLoad.cpp  PlayerDetailInfoLoad.h  PlayerDetailInfoPassing.cpp  PlayerDetailInfoPassing.h  StatusInfomation.cpp  StatusInfomation.h  protocol_define.h
src/dummyServer/: dummyServer.cpp  header_cct.cpp  header_cct.h  stdafx.cpp  stdafx.h
src/lib/: acceptor.cpp  asyn_session_pool.cpp  async_session_impl.cpp  async_session_pool.cpp  byte_order.cpp  configure.cpp  db_connector.cpp  (+16 more)
test/: test_module.cpp  test_module.h
(+11 files in other folders)
